# python-orchestrator-client

./: .gitignore  README.md  requirements-ci.txt  setup.cfg  setup.py
conf/: orchestrator_endpoints.txt
pyorchestratorclient/: __init__.py  endpoints.py
scripts/: orchestrator_api_conf.sh  verify.sh
