[metadata]
name = pyorchestratorclient
version = 3.2.4.0
author = Eduardo J. Ortega U.
author_email = github435@example.com
description = A simple Orchestrator API client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejortegau/python-orchestrator-client
project_urls =
    Bug Tracker = https://github.com/ejortegau/python-orchestrator-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .